--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -15,8 +15,8 @@ canvas {
     position: relative;
     width: 100%; /* Scale canvas dynamically */
     height: 100%;
-    max-width: 778px; /* Match Phaser's game width */
-    max-height: 725px; /* Match Phaser's game height */
+    max-width: 1200; /* Match Phaser's game width */
+    max-height: 1025; /* Match Phaser's game height */
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.5);
     z-index: 0;
     pointer-events: auto; /* Allow interaction */
