--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,10 @@
     gap: 20px;
     justify-content: center;
 }
-
+.hidden {
+    display: none;
+  }
+  
 /* Competition Styles */
 .competition {
     width: 300px;
